package kodenix.mastermind.views;

abstract class AbstractView {
	
	AbstractView() {}
	
	abstract void interact();
}
